--- a/lab3/lab3_2/style.css
+++ b/lab3/lab3_2/style.css
@@ -1,3 +1,11 @@
+.roboto-<uniquifier> {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 p{
 color:white;
 text-align:right;
