--- a/lab3/lab3_2/style.css
+++ b/lab3/lab3_2/style.css
@@ -9,7 +9,7 @@
 p{
 color:white;
 text-align:right;
-font-family: "Roboto", sans-serif;
+#font-family: "Roboto", sans-serif;
 }
 body{
 background-color:black;
