--- a/lab3/lab3_2/style.css
+++ b/lab3/lab3_2/style.css
@@ -1,10 +1,10 @@
-.roboto-<uniquifier> {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+@font-face {
+
+  font-family: "Robotor",sans-serif; 
+
+  src: url("Roboto-VariableFont_wdth,wght.ttf") ; 
+  font-style: normal; 
+  font-weight: normal; 
 }
 p{
 color:white;
