--- a/lab3/lab3_2/style.css
+++ b/lab3/lab3_2/style.css
@@ -45,7 +45,7 @@ h2{
   padding-left:10px;
   padding-right:10px;
  }
-b{
+strong{
   font-family:"Arsenal SC", sans-serif;
   font-weight: 700;
   font-style: normal;  
