--- a/lab3/lab3_2/style.css
+++ b/lab3/lab3_2/style.css
@@ -19,7 +19,7 @@ color:white;
 text-align:right;
 }
 body{
-background-image: url('patt.svg');
+background-image: url('patt2.svg');
 font-size:1.5rem;
 line-height:2rem;
 
